tests/semantic/case_err2.expected

Semantic Error [line 9]: value: "literal0"
	Unexpected l-value type: 
Expected type(s) 'Integer' or 'Boolean'; found 'String' instead.
