tests/semantic/case_err2.mtp
(*Try case with string literal*)
const test := 'error';
var a, b : integer;


begin

	case a + b of
	'error2':
		a := b
	;
	test:
		b := a
	end


end.